2004-03-05  Alexander Larsson  <alexl@redhat.com>

	* modules/default-modules.conf (sftp):
	Don't include "lib" and ".so" in library reference.
	Noticed by Michael Wilson <Michael.Wilson@bull.net>
	
2004-03-05  Christophe Fergeau  <teuf@gnome.org>

	* libgnomevfs/xdgmimemagic.c: fix sniffing for mime types using
	  nested patterns (application/x-core for example)
	
2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* modules/http-method.c:
	Don't send host:port when port undefined
	Remove webdav hack from last checkin that was caused by this.

2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* modules/http-method.c (make_propfind_request):
	Handle redirects in PROPFIND.
	Force slash on end of uri for open_directory.

2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Actually define HAVE_OPENSSL when used.

2004-03-04  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/xdgmimeint.h: 
	* libgnomevfs/xdgmimeint.c:
	Fix some declarations.

2004-03-03  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime.c (_gnome_vfs_get_mime_type_internal):
	Prefer extensions for ole-streams. Fixes sniffing of ms office types.

2004-03-03  Alexander Larsson  <alexl@redhat.com>

	* modules/file-method.c (do_monitor_add):
	Handle NULL filenames correctly.

2004-03-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-client.c:
	(gnome_vfs_volume_monitor_client_class_init),
	(read_drives_from_daemon), (read_volumes_from_daemon),
	(gnome_vfs_volume_monitor_client_finalize):
	* libgnomevfs/gnome-vfs-volume-ops.c: (force_probe),
	(emit_pre_unmount):
	Handle NIL return from _gnome_vfs_client_get_daemon().
	Hopefully fixes #133808.

2004-03-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime.c (_gnome_vfs_get_mime_type_internal):
	Extension before sniffed for bzip2.

2004-02-28  Bryan Forbes  <mxpxfifws@yahoo.com>

	* libgnomevfs/gnome-vfs-drive.h: changed GnomeVFSDriveClass to follow